--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
@@ -183,18 +183,12 @@
 \newcommand{\re}[3][2]{\hypertarget{#2}{\textbf{\textcolor{brightturquoise}{#3}}}}
 \newcommand{\se}[3][2]{\index{#2}{\textit{\textcolor{brightturquoise}{#3}}}}
 \maketitle 
-
 \newpage
-
 \hypertarget{sod}
 \tableofcontents
-
 \newpage
-
 \section{Основные определения}
-
 \begin{defn} 
-
 \se{Категория}{Категория $\mathcal{C}$} -- это 
     \begin{itemize}
         \item класс\footnote{Если вдруг даже множество, то такая категория называется \textit{малой}} $\Ob\mathcal{C}$, элементы которого называются \textit{объектами};
@@ -202,44 +196,32 @@
         \item операция композиции $\circ $: $\Hom (Y, Z)\times \Hom (X, Y) \rightarrow \Hom (X, Z)$, удовлетворяющая двум аксиомам.
     \end{itemize}
 \end{defn}
-
 Аксиомы композиции: 
-
 \begin{itemize}
     \item ассоциативность $(f\circ g)\circ h = f\circ (g\circ h)$;
     \item для любого $A$ из $\mathcal{C}$\footnote{$\Ob$ по-хорошему писать надо, но оно часто опускается} существует $\id_{A}\in{\Hom (A, A)}$ такое, что $f\circ \id_{A} = f$, $\id_{A}\circ f = f$ для любого осмысленного $f$.
 \end{itemize}
-
 \begin{defn}
     Два объекта $X$ и $Y$ в категории $\mathcal{C}$ называются \se{Изоморфные объекты}{изоморфными}, если $\exists f\in{\Hom (X, Y)}$ и $g\in{\Hom (Y, X)}$ такие, что $f\circ g=\id_{Y}$, $g\circ f=\id_{X}$. $f$ и $g$ в этом случае называются $\textit{изоморфизмами}$.
 \end{defn}
-
 \begin{defn}
     Объект $A$ в категории $\mathcal{C}$ называется \se{Терминальный объект}{терминальным} (\cursed{инициальным}), если для любого $X$ из $\mathcal{C}$ $\vert \Hom (X, A)\vert=1$ ($\vert \Hom (A, X)\vert=1$)
 \end{defn}
-
 \begin{stat}
     Если терминальный (инициальный) объект существует, то он единственен с точностью до единственного изоморфизма.
 \end{stat}
-
 \begin{proof}
     Пусть $A$ и $A'$ -- терминальные объекты, тогда из определения существует единственный $f$ из $A$ в $A'$ и единственный $g$ из $A'$ в $A$, композиция $f\circ g$ в этом случае будет элементом $\Hom (A', A')$, но $\id_{A'}$ также элемент этого одноэлементного множества, поэтому $f\circ g = \id_{A'}$, аналогично $g\circ f = \id_{A}$, то есть $A$ и $A'$ изоморфны по определению.
 \end{proof}
-
 Как можно заметить, инициальный и терминальный объекты подозрительно похожи, для того, чтобы формализовать наше подозрение, введём понятие двойственной (противоположной) категории.
-
 \begin{defn}
     Для категории $\mathcal{C}$ определим следующую категорию $\mathcal{C}^{op}$, которую будем называть \se{Двойственная категория}{двойственной} (\cursed{противоположной}): $\Ob\mathcal{C}^{op} = \Ob\mathcal{C}$, $\Hom _{\mathcal{C}^{op}}(X, Y)=\Hom _{\mathcal{C}}(Y, X)$, $f^{op}\circ ^{op}g^{op} = g\circ f$.
 \end{defn}
-
 \begin{remark}
     Иницальный объект в $\mathcal{C}$ соответсвует терминальному в $\mathcal{C}^{op}$ и наоборот.
 \end{remark}
-
 \section{Примеры на основные определения}
-
 Примеры категорий с указанием терминальных и инициальных объектов: 
-
 \begin{itemize}
     \item $Sets$: $\Ob Sets=$ все множества, $\Hom (X, Y)=$ все отображения из $X$ в $Y$, $\circ $ -- обычная композиция отображений. Инициальный объект -- $\emptyset$, терминальный -- любой, состоящий из одного элемента (нетрудно проверить, что они действительно попарно изоморфны);
     \item $Groups$, $Rings$ и т.д. морфизмы были определены на первом курсе. В $Vect_{F}$ и инициальный, и терминальный объект -- 0;
@@ -249,59 +231,43 @@
     \item Частичный (пред)порядок на $M$ (ЧУМ), $\Ob\mathcal{C}$ = $M$, $\Hom (x, y) = {\emptyset}$, если $x\leq y$, $=\emptyset$, иначе.
     \item $Rels$, $\Ob Rels$ = все множества, $\Hom (X, Y)$ = все подмножества в $X\times{Y}$, $R\circ  S$ = $\lbrace(x, z) \vert \exists y \in Y, (x, y)\in S, (y, z)\in T\rbrace$
 \end{itemize}
-
 %main_content
 %ukazatel'. chto ne v\idno blyat'?
-
 \section{Ещё определения}
-
 \begin{defn}
     \se{Произведение объектов}{Произведением} объектов $X$ и $Y$ в категории $\mathcal{C}$ называется объект $X\times Y$, обладающий следующим универсальным свойством: фиксированы морфизмы $pr_{X}: X\times Y\rightarrow X$ и $pr_{Y}: X\times Y\rightarrow Y$ и для любого объекта $Z$ с морфизмами $f: Z\rightarrow X$ и $g: Z\rightarrow Y$, существует единственный морфизм $h: Z\rightarrow X\times Y$, делающий диаграмму коммутативной: $pr_{X} \circ  h = f$, $pr_{Y} \circ  h = g$.
 \end{defn}
-
 Пользуясь принципом двойственности можно определить копроизведение, развернув все стрелки.
-
 \begin{defn}
     \se{Копроизведение объектов}{Копроизведением} объектов $X$ и $Y$ в категории $\mathcal{C}$ называется объект $X\amalg Y$, обладающий следующим универсальным свойством: фиксированы морфизмы $i_{X}: X\amalg Y\leftarrow X$ и $i_{Y}: X\amalg Y\leftarrow Y$ и для любого объекта $Z$ с морфизмами $f: Z\leftarrow X$ и $g: Z\leftarrow Y$, существует единственный морфизм $h: Z\leftarrow X\amalg Y$, делающий диаграмму коммутативной: $h \circ  i_{X} = f$, $h \circ  i_{Y} = g$.
 \end{defn}
-
 \begin{stat}
     Если (ко)произведение существует, то оно единственно с точностью до единственного изоморфизма.
 \end{stat}
-
 \begin{proof}
     Следует из определения через универсальное свойство. Если взять два объекта с этим свойством, то из них будут единственные стрелки в друг друга, а композиция окажется $\id$, подробнее см. утверждение1. Далее подобные доказательства будут полностью опускаться.
 \end{proof}
-
 Примеры на произведение и копроизведение:
-
 \begin{itemize}
-    \item $Sets$: $X\times Y$ -- обычное декартово произведение; $X\amalg Y$ -- дизъюнктное объединение $X$ и $Y$\footnote{Для меня странно, что произведение в этом случае существует всегда, а двойственное к нему -- нет, но что поделать};
+    \item $Sets$: $X\times Y$ -- обычное декартово произведение; $X\amalg Y$ -- дизъюнктное объединение $X$ и $Y$\footnote{Здесь ранее было указано, что оно существует не всегда, это неправда,оно всегда есть};
     \item $Groups$: $G\times H$ -- опять же декартово произведение; $G\amalg H$ = $G\ast H$ -- свободное произведение групп (во втором семестре оно задавалось ровно этим универсальным свойством);
     \item $Top$: аналогично $Sets$;
     \item ЧУМ: $x\times y$ = $min(x, y)$, $x\amalg y$ = $max(x, y)$.
 \end{itemize}
-
 Определим ещё одну важную категорию (пока что в частном случае, когда-нибудь здесь появится значительно более общее определение)
-
 \begin{defn}
     \se{Категория стрелки}{Категорией стрелки} $\mathcal{C}/A$, где $\mathcal{C}$ -- категория, а $A$ -- объект в ней, называется следующая категория: $\Ob\mathcal{C}/A$ = пары $(X, f)$, где $X\in \Ob\mathcal{C}$, $f\in \Hom (X, A)$; $\Hom ((X, f), (Y, g))$ = $\lbrace h\in \Hom (X, Y) \vert f = g\circ  h \rbrace$. 
 \end{defn}
-
 Терминальным объектом в этой категории будет $(A, \id_{A})$. Аналогично, развернув стрелки, можно определить категорию $\mathcal{C}\setminus A$
-
 \begin{defn}
     Произведение в категории стрелки называется \se{Расслоённое произведение}{расслоённым произведением}.
 \end{defn}
-
 Рассмотрим примеры расслоённых произведений: 
-
 \begin{itemize}
     \item $Sets$: $X\times _{A} Y$ = $\lbrace(x, y) \in X\times Y\vert f(x)=g(y)\rbrace$;
     \item $Sets^{op}$: $X\amalg _{A} Y$ = $X\amalg Y / \sim$, где $\sim$ порождено $f(a) \sim g(a)$. В $Top$ это просто склейка;
     \item $Groups$: произведение как на $Sets$, $G\amalg _{K} H$ -- свободное произведение с объединённой подгруппой.
 \end{itemize}
-
 \begin{defn}
 \se{Функтор}{Функтором} $\mathcal{F}$ называется отображение между двумя категориями $\mathcal{C}$ и $\mathcal{D}$ (определённое и на объектах, и на морфизмах) со свойствами: 
     \begin{itemize}
@@ -310,9 +276,7 @@
         \item $\mathcal{F}(\id_{A}) = \id_{\mathcal{F}(A)}$.
     \end{itemize}
 \end{defn} 
-
 Примеры функторов: 
-
 \begin{itemize}
     \item $\pi _{1}: Top \rightarrow Groups$;
     \item Если $M_{1}$ и $M_{2}$ -- моноиды (как категории с одним объектом), тогда $\mathcal{F}$ -- гомоморфизм моноидов;
@@ -320,9 +284,7 @@
     \item В ЧУМе функторы -- монотонные отображения;
     \item $\mathcal{F}: \mathbb{1} \rightarrow \mathcal{C}$ -- выбор объекта в $\mathcal{C}$, а если наоборот, то функтор единственен, то есть одноэлементная категория с одним морфизмом -- это <<терминальная>> категория (строгое определение будет позднее).
 \end{itemize}
-
 %2nd
-
 \section{Функтор}
 %это было на предыдущей лекции, но я повторю его, чтобы моя часть была выстроена лаконично
 \defn \se{Функтор}{Функтор} - это отображение $F: C \ra D$ между категориями со следующими свойствами:
@@ -341,7 +303,6 @@ $F(f) \circ F(g) = id_{F(B)}$ и $F(g) \circ F(f) = id_{F(A)}$. \\
 \begin{flushright}
 QED
 \end{flushright}
-
 \section{Примеры функторов}
 \begin{enumerate}
     \item \se{Забывающий функтор}{Забывающий функтор} \\
@@ -387,7 +348,6 @@ $A \in\Ob\;C$ -- $F(A) \in\Ob\;D$ \\
 $f: A \ra B$ -- $F(f): F(B) \ra F(a)$ и $F(f \circ g) = F(g) \circ F(f)$, $F(id_A) = id_{F(A)}$ \\
 \defn \se{Представимый функтор}{Представимый функтор} - это такой функтор $h_A: C^{Op} \ra Sets$, $A \in\Ob\;C$, действующий по правилу: \\
 $h_A(X) = Hom(X, A)$, $h_A(f): \phi \mapsto \phi \circ f$
-
 \section{Мономорфизмы и эпиморфизмы}
 Мы хотим определить "инъективность" и "сюръективность" для гомоморфизмов между элементами категорий. Делается это следующим образом:
 \defn Гомоморфизм f называется \se{мономорфизм}{мономорфизмом}, если "на него можно сокращать слева", т.е. $f \circ g = f \circ h \Ra g = h$ \\
@@ -411,7 +371,6 @@ $h_A(X) = Hom(X, A)$, $h_A(f): \phi \mapsto \phi \circ f$
 \end{itemize}
 \exer \cursed{Расщепимый мономорфизм + эпиморфизм = изоморфизм} и \\
 \cursed{Расщепимый эпиморфизм + мономорфизм = изоморфизм}
-
 \section{Естественные преобразования}
 \defn $\alpha: F \ra G$ называется \se{Естественное проеобразование}{естественным преобразованием} для функторов $F, G: C \ra D$, если $\forall A \in C\;\exists \alpha_A: F(A) \ra G(A)$ такой, что \\
 $\forall f \in Hom(A, B)\;\exists \alpha_B: F(B) \ra G(B)$, причем следующая диаграмма коммутативна:
@@ -429,7 +388,6 @@ $Ob\;C\times I =\Ob\;C \times\Ob\;I$, $Hom(C \times I) = Hom(C) \times Hom(I)$ \
     (к примеру, $(\RR, +)$ и $(S^1, \cdot)$ - это топологические группы). В данном примере нас будет интересовать \cursed{локально компактные тополгические абелевы группы}. Для каждой группы $A$ определим двойственную: $A^* = Hom(A, S^1)$ - непрерывные гомоморфизмы групп (вместе с какой-то топологией). \\
     Итак, для функторов $LocCompAb \ra LocCompAb$ $F = Id$ и $G: A \mapsto A^{**}$ есть естественное преобразование $\alpha: F \ra G$, которое определяется так же, как и в предыдущем примере.
 \end{itemize}
-
 \section{Эквивалентность категорий}
 \defn Есть три функтора $F, G, H: C \ra D$ и два естественных преобразования: $\alpha: F \ra G$ и $\beta: G \ra H$.  \se{Композиция(вертикальная) естественных преобразований}{Композиция(вертикальная) естественных преобразований} это естественное преобразование $\beta \circ \alpha : F \ra H\;|\;(\beta \circ \alpha)_A = \beta_A \circ \alpha_A$
 \remark Заметим, что мы таким образом определили категорию $Funct(C, D)$ - функторов из $C$ в $D$, в которой морфизмы - это естественные преобразования.
@@ -440,14 +398,54 @@ $Ob\;C\times I =\Ob\;C \times\Ob\;I$, $Hom(C \times I) = Hom(C) \times Hom(I)$ \
 \defn Категории $C$ и $D$ называются \se{Эквивалентность категорий}{эквивалентными}, если $\exists F: C \ra D$ и $G: D \ra C$, причем есть естественные преобразования \\
 $\alpha: Id_G \ra F \circ G,\; \alpha^{-1}: F \circ G \ra Id_G$ и $\beta: Id_C \ra G \circ F,\; \beta^{-1}: G \circ F \ra Id$ такие, что \\
 $\alpha \circ \alpha^{-1} = Id, \alpha^{-1} \circ \alpha = Id$ и $\beta \circ \beta^{-1} = Id, \beta^{-1} \circ \beta = Id$
-
-
-
-
-
-
-
-
+\\Теперь приведём некоторые примеры двойственных категорий:
+\begin{itemize}
+\item Двойственность Понтрягина: $LocCompAb\simeq LocCompAb^{op}$ со следующими функторами: $F(A) = Hom(A, S^1)$, где на второй группе компактная открытая топология, и в обратную сторону также. Теперь надо указать естественное преобразование $id \rightarrow G\circ F$: $A \rightarrow Hom(Hom(A, S^1), S^1)$. Примеры: $\ZZ \longleftrightarrow S^1$, $(\RR, +) \longleftrightarrow (\RR, +)$, $CompAb \longleftrightarrow Ab$;
+\item Двойственность Стоуна: $TotDiscComp^{op} \simeq  Bool$, где $TotDiscComp$ -- вполне несвязные (дополнение открытого открыто) компактные топологичекие пространства, $Bool$ -- коммутативные кольца с единицей, в которых квадрат любого элемента равен ему самого. $F(X)$ = булева алгебра открытых множеств в $X$, умножение -- пересечение, сумма -- симметрическая разность. $G(R)$ = множество максимальных идеалов в $R$ с топологией Зарисского.
+\item Двойственность Гельфанда: $Comp^{op} \simeq коммутативные C^*$-алгебры, где $C^*$-алгебра -- алгебра над $\CC$ с инволюцией *, нормой, согласованной с *: $||a*|| = ||a||$, $||aa^*|| = ||a||^2$, и эта алгебра полна как метрическое простанство, с данной нормой, морфизмы -- морфизмы алгебр, не увеличивающие норму. $F(X) \rightarrow Map(X, \CC)$, $f^*(x) = f(\bar{x})$, $||f|| = max|f(x)|$. Функтор в другую сторону: $A \rightarrow$ множество максимальных идеалов, устойчивых относительно инволюции, с некоторой топологией.
+\item Категория накрытий $Cov(X)$: фиксируем компактно-порождённое связное топологическое пространство $X$, $ObCov(X) =$ пары из $Y$ и накрытия $Y \rightarrow X$, морфизмы -- непрерывные отображения из $Y$ в $Z$, коммутирующее с выбранными накрытиями. Тогда $Cov(X)^{op} \simeq \pi_{1}(X)$-множества \footnote{здесь может быть когда-нибудь будет определение $G-множеств$};
+\item Есть двойственность категорий, возникающая из теории Галуа.
+\end{itemize}
+\begin{theorem} \se{Критерий эквивалентности категорий}{Критерий эквивалентности категорий}: 
+$F: C\rightarrow D$ задаёт эквивалентность категорий тогда и только тогда, когда выполнены следующие три условия:\begin{itemize}
+\item $F$ \se{Унивалентность функтора}{унивалентен}, то есть отображение $Hom(X, Y) \rightarrow Hom(F(X), F(Y))$ инъективно;
+\item $F$ \se{Полнота функтора}{полон}, то есть отображение $Hom(X, Y) \rightarrow Hom(F(X), F(Y))$ сюръективно;
+\item $F$ существенно сюръективен: $\forall A \in D$ $\exists X \in C: A \cong F(X)$.
+\remark первые два условия означают, что $F(C)$ -- полная подкатегория в $D$.
+\end{itemize}
+\end{theorem}
+\begin{proof}
+\begin{lemma}
+$A \cong B$, $C \cong D$, тогда $Hom(A, C) \cong Hom (B, D)$, причём каждому морфизму слева сопоставляется единственный морфизм, делающий  диаграмму из этого морфизма и двух фиксированных изоморфизмов коммутативной.
+\end{lemma}
+В одну сторону: $G: D \rightarrow C$, $F \circ G \simeq id_D$, $X \simeq F(G(X))$ -- существенная сюръективность.
+\\Пусть $Ff = Fg$, $GFf = GFg$, тогда и $f$, и $g$ делают соответствующую диаграмму из леммы коммутативной, откуда совпадают, то есть $F$ -- унивалентен.
+\\Полнота: $f: F(A) \rightarrow F(B)$, рассмотрим $G(f)$ и диаграмму с $A, B, GF(A), GF(B)$, есть единственное $g$, делающее диаграмму коммутативной, $GF(g) = G(f)$, откуда $F(g) = f$.
+\\В другую сторону: построим $G$, так как $F$ существенно сюръективно, можно определить $G(X) = Y: X \cong F(Y)$\footnote{при этом мы выбираем один элемент даже не из множества, а из класса}, определим $G$ на морфизмах, сделав диаграмму из $A, B, F(G(A)), F(G(B))$ коммутативной получим $g: F(G(A)) \rightarrow F(G(B))$, но $F$ -- полный и унивалентный, поэтому $g = F(h)$, $G(f) := h$. Изоморфизм между $id$ и $F \circ G$ есть по построению, дальше надо построить $\eta_X: X \rightarrow G(F(X))$, для этого найдём $F(\eta_X): F(X) \rightarrow F(G(F(X)))$, такое отображение $F(\eta_X)$ уже найдётся, и $F$ можно убрать из-за его хороших свойств. 
+\end{proof}
+\section{Скелеты}
+\begin{defn}
+Категория \se{Скелетная категория}{скелетная}, если в ней изоморфные объекты совпадают.
+\end{defn}
+\begin{defn}
+\se{Скелет}{Скелет} категории $C$ -- скелетная полная подкатегория $D$ (для любого объекта из $C$ есть изоморфный ему из $D$).
+\end{defn}
+\remark Скелет категории эквивалентен исходной категории, так как можно взять одним из функторов вложение.
+\\Примеры скелетов: \begin{itemize}
+\item $Sets$ -- кардиналы;
+\item Вполне упорядоченные множества -- ординалы;
+\item $Vect_F$ -- $F^{(I)}$, где $I$ -- кардинал.
+\end{itemize}
+\begin{stat} \begin{itemize}
+\item В каждой категории существует скелет;
+\item Скелет эквивалентен исходной категории;
+\item Скелетные категории эквивалентны тогда и только тогда, когда изоморфны;
+\item Две категории эквивалентны $\Leftrightarrow$ их скелеты изоморфны.
+\end{itemize}
+\end{stat}
+\begin{proof}
+Первое -- возьмём по представителю из каждого класса эквивалентности по отношению изоморфности. Четвёртое следует из третьего. Третье: $F$ и $G$ задают эквивалентность $C$ и $D$ $A \cong F(G(A))$, но тогда $A = F(G(A))$, построим $G'$, на объектах совпадает с $G$, $f = F(h)$ из хороших свойств $F$, $G(f) := h$.
+\end{proof}
 \hypertarget{dex}
     \printindex
 %staryi_variant
