Исправил мелкую опечатку
В определении функтора явно требовалось использовать Х как обозначение объекта категории

--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/algg.tex
@@ -289,7 +289,7 @@
 %это было на предыдущей лекции, но я повторю его, чтобы моя часть была выстроена лаконично
 \defn \se{Функтор}{Функтор} - это отображение $F: C \ra D$ между категориями со следующими свойствами:
 \begin{enumerate}
-    \item Если $X \in\Ob\;C$, то $F(x) \in\Ob\;D$
+    \item Если $X \in\Ob\;C$, то $F(X) \in\Ob\;D$
     \item $\forall A, B \in\Ob\;C$ и $F: A \ra B$ -- $F(f): F(A) \ra F(B)$, причем "произведение переходит в произведение" и "единичный гомоморфизм в единичный гомоморфизм", т.е. \\
     $F(f \circ g) = F(f) \circ F(g)$ и $F(id_A) = id_{F(A)}$
 \end{enumerate}
