--- a/ABSOLUTELY NEW CONSPECTY (3 sem)/duds.tex
+++ b/ABSOLUTELY NEW CONSPECTY (3 sem)/duds.tex
@@ -447,7 +447,7 @@ $f(x,y)$ определена на $G = (a,b) \times \mathbb{R} $, $f$ и $\frac
 Для задачи Коши с начальным условием $(x_0,y_0)$ имеем
 
 
-\[y  = e^{\int_{x_0}^x p(t) dt} \left( y_0 + \int\limits_{x_0}^x q(s) e^{-\int_{x_0}^x p(t) dt} ds \right)\]
+\[y  = e^{\int_{x_0}^x p(t) dt} \left( y_0 + \int\limits_{x_0}^x q(s) e^{-\int_{x_0}^s p(t) dt} ds \right)\]
 
 \end{enumerate}
 
